// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a ListView with a divided list 1`] = `
<List
  data-terra-clinical-item-collection-list-view={true}
  isDivided={true}
>
  <Item
    accessoryAlignment="alignCenter"
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasStartAccessory={true}
    isListItemTruncated={false}
    isSelectable={false}
    isSelected={false}
    itemKey="1"
    key=".$1"
    listItemLayout="oneColumn"
    listItemTextEmphasis="default"
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a ListView with children 1`] = `
<List
  data-terra-clinical-item-collection-list-view={true}
  isDivided={false}
>
  <Item
    accessoryAlignment="alignCenter"
    comment={
      <ItemComment
        isTruncated={false}
        text="test comment"
      />
    }
    endAccessory={
      <p>
        E
      </p>
    }
    hasStartAccessory={true}
    isListItemTruncated={false}
    isSelectable={false}
    isSelected={false}
    itemKey={null}
    key=".0"
    listItemLayout="oneColumn"
    listItemTextEmphasis="default"
    startAccessory={
      <p>
        S
      </p>
    }
    view="list"
  >
    <ItemDisplay
      isTruncated={false}
      text="Display 1"
    />
  </Item>
</List>
`;

exports[`should render a default ListView 1`] = `
<List
  data-terra-clinical-item-collection-list-view={true}
  isDivided={false}
/>
`;
